# cafq

./: .travis.yml  Cargo.toml  README.md
src/: cli.rs  concat.rs  finder.rs  init.rs  main.rs  merger.rs  samples.rs
test_files/: input_duplicate_test.conf  input_test.conf  invalid_input.conf
