[package]
name = "fastq-merge-bench"
version = "0.1.0"
authors = ["Heru Handika <herubiolog@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*"
clap = "*"
regex = "1.4.5"
lazy_static = "1.4.0"
walkdir = "2.3.1"
indicatif = "*"
glob = "0.3.*"
flate2 = "*"
rayon = "1.5.*"

[[bin]]
name = "cafq"
path = "src/main.rs"